turtleart.circleying.CircleYing.scala.error
Erreur de compilation :
CircleYing:2: error: ';' expected but 'override' found.
}override def run() {
 ^