turtleart.circleying.CircleYing.scala.code
override def run() {
}override def run() {
  baisseCrayon()
  for (i<-1 to 360) {
    avance(2)
    droite(1)
  }
  for (i<-1 to 180) {
    avance(1)
    droite(1)
   }
  for (i<-1 to 180) {
    avance(1)
   	gauche(1)
   }
  
}